# mcp_auto_register

./: .gitignore  pixi.toml  pyproject.toml
src/mcp_auto_register/: __init__.py
